plugins {
    id("io.papermc.paperweight.userdev") version "2.0.0-beta.14" apply false
}

group = "com.artillexstudios.axapi.nms"
version = rootProject.version

subprojects {
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencies {
        compileOnly project(":api")
    }
}